--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div>
               <h2>Mensaje</h2>
               <span class="alert-message">
-                <img src="img/alert.svg" alt="Icono de Alerta" />
+                <img id="alert-img" src="img/alert.png" alt="Icono de Alerta" />
                 <h6>Puede incluir cualquier tipo <br />de texto incluso mayúsculas y acentos</h6>
               </span>
             </div>
